--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
                 <version>6.9.6</version>
             </dependency>
 
+            <dependency>
+                <groupId>cn.sixlab</groupId>
+                <artifactId>six-util</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+
             <!-- 数据库 -->
             <!-- Sqlite -->
             <dependency>
@@ -30,7 +36,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.26</version>
+                <version>5.1.27</version>
             </dependency>
 
             <!-- nutz -->
