--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-target/
+*.class
+*.jar
+*.war
+*.ear
+
+hs_err_pid*
+**bin/
+**target/
+**temp/
+.*/
+
+*.tmp
+.*/
+
+sonar-project.properties
+
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
